--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
+  firebase_app_check: ^0.2.2+1
   firebase_core: ^2.29.0
   flutter:
     sdk: flutter
