--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   firebase_app_check: ^0.2.2+1
+  firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
   flutter:
     sdk: flutter
