add login erro componement and make repo more useful

--- a/firebase.json
+++ b/firebase.json
@@ -1,25 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "flutterfinal-8cb16",
-          "appId": "1:789367667230:android:6863b232e9ce4fe0c68c0f",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "flutterfinal-8cb16",
-          "configurations": {
-            "android": "1:789367667230:android:6863b232e9ce4fe0c68c0f",
-            "ios": "1:789367667230:ios:74ea2efe5053b327c68c0f",
-            "macos": "1:789367667230:ios:74ea2efe5053b327c68c0f",
-            "web": "1:789367667230:web:4e6a3806587ca587c68c0f",
-            "windows": "1:789367667230:web:d20fe5f0f46403b8c68c0f"
-          }
-        }
-      }
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"flutterfinal-8cb16","appId":"1:789367667230:android:6863b232e9ce4fe0c68c0f","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"flutterfinal-8cb16","configurations":{"android":"1:789367667230:android:6863b232e9ce4fe0c68c0f","ios":"1:789367667230:ios:74ea2efe5053b327c68c0f","macos":"1:789367667230:ios:74ea2efe5053b327c68c0f","web":"1:789367667230:web:4e6a3806587ca587c68c0f","windows":"1:789367667230:web:d20fe5f0f46403b8c68c0f"}}}}}}
