--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: docto_libre
 description: "Doctolib in easy way"
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
   firebase_app_check: ^0.2.2+1
@@ -12,6 +12,8 @@ dependencies:
   firebase_core: ^2.29.0
   flutter:
     sdk: flutter
+  http: ^1.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
